# sake

./: CMakeLists.txt  README.md
cmake/: FindCheck.cmake
inc/sake/: array.h  list.h  string.h  utils.h  vector.h
sake/: sake_array.c  sake_array.h  sake_common.h  sake_list.c  sake_list.h  sake_macro.h  sake_vector.c  sake_vector.h
src/sake/: array.c  list.c  string.c  vector.c
tests/: CMakeLists.txt  array.c  check_sake.c  list.c  string.c  vector.c
